--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -2,12 +2,14 @@
 <Robot type="FirstInspires-FTC">
     <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="DQ2M4Q7K" parentModuleAddress="4">
         <LynxModule name="Expansion Hub 4" port="4">
-            <NeveRest40Gearmotor name="left_front_drive" port="0" />
-            <NeveRest40Gearmotor name="left_back_drive" port="1" />
-            <NeveRest40Gearmotor name="right_front_drive" port="2" />
-            <NeveRest40Gearmotor name="right_back_drive" port="3" />
-            <Servo name="s1" port="0" />
-            <Servo name="s2" port="1" />
+            <NeveRest40Gearmotor name="left_front_drive" port="3" />
+            <NeveRest40Gearmotor name="left_back_drive" port="2" />
+            <NeveRest40Gearmotor name="right_front_drive" port="1" />
+            <NeveRest40Gearmotor name="right_back_drive" port="0" />
+            <Servo name="lift_right" port="0" />
+            <Servo name="grab_right" port="1" />
+            <Servo name="lift_left" port="2" />
+            <Servo name="grab_left" port="3" />
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
         </LynxModule>
     </LynxUsbDevice>
