--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -1,16 +1,17 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes' ?>
 <Robot type="FirstInspires-FTC">
-    <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="DQ2M4Q7K" parentModuleAddress="4">
-        <LynxModule name="Expansion Hub 4" port="4">
-            <goBILDA5202SeriesMotor name="left_front_drive" port="3" />
-            <goBILDA5202SeriesMotor name="left_back_drive" port="2" />
-            <goBILDA5202SeriesMotor name="right_front_drive" port="1" />
+    <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="DQ2M4Q7K" parentModuleAddress="2">
+        <LynxModule name="Expansion Hub 2" port="2">
             <goBILDA5202SeriesMotor name="right_back_drive" port="0" />
-            <Servo name="lift_right" port="0" />
-            <Servo name="grab_right" port="1" />
-            <Servo name="lift_left" port="2" />
-            <Servo name="grab_left" port="3" />
+            <goBILDA5202SeriesMotor name="left_back_drive" port="1" />
+            <goBILDA5202SeriesMotor name="right_front_drive" port="2" />
+            <goBILDA5202SeriesMotor name="left_front_drive" port="3" />
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
+        </LynxModule>
+        <LynxModule name="Expansion Hub 3" port="3">
+            <LynxEmbeddedIMU name="imu 1" port="0" bus="0"/>
+            <Servo name="lift_red" port="0" />
+            <Servo name="lift_blue" port="2" />
         </LynxModule>
     </LynxUsbDevice>
 </Robot>
