Foundation Grabber, Fixing Arm

--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -9,7 +9,8 @@
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
             <Servo name="stone_rotate" port="4" />
             <Servo name="stone_grab" port="5" />
-            <Servo name="foundation_grabber" port="3" />
+            <Servo name="foundation_GR" port="3" />
+            <Servo name="foundation_GL" port="2" />
 
         </LynxModule>
         <LynxModule name="Child" port="3">
