First code for new lift controls

--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -7,16 +7,18 @@
             <goBILDA5202SeriesMotor name="right_front_drive" port="2" />
             <goBILDA5202SeriesMotor name="left_front_drive" port="3" />
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
-            <Servo name="stone_rotate" port="4" />
             <Servo name="stone_grab" port="5" />
-            <Servo name="foundation_GR" port="3" />
-            <Servo name="foundation_GL" port="2" />
+            <Servo name="capstone_holder" port="4" />
+            <Servo name="stone_extend" port="3" />
+            <Servo name="foundation_GR" port="2" />
+            <Servo name="foundation_GL" port="1" />
 
         </LynxModule>
         <LynxModule name="Child" port="3">
-            <goBILDA5202SeriesMotor name="collect" port="0" />
-            <goBILDA5202SeriesMotor name="lift" port="1" />
-            <goBILDA5202SeriesMotor name="arm" port="2" />
+            <goBILDA5202SeriesMotor name="left_collect" port="0" />
+            <goBILDA5202SeriesMotor name="right_collect" port="1" />
+            <goBILDA5202SeriesMotor name="left_lift" port="2" />
+            <goBILDA5202SeriesMotor name="right_lift" port="3" />
             <Servo name="lift_red" port="0" />
             <Servo name="lift_blue" port="1" />
         </LynxModule>
