--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -7,13 +7,9 @@
             <goBILDA5202SeriesMotor name="right_front_drive" port="2" />
             <goBILDA5202SeriesMotor name="left_front_drive" port="3" />
             <LynxEmbeddedIMU name="imu" port="0" bus="0" />
-            <Servo name="bTransfer_L" port="" />
-            <Servo name="bTransfer_R" port="" />
-            <Servo name="stone_grab" port="5" />
-            <Servo name="capstone_holder" port="4" />
-            <Servo name="stone_extend" port="3" />
-            <Servo name="foundation_GR" port="2" />
-            <Servo name="foundation_GL" port="1" />
+            <Servo name="foundation_GL" port="0" />
+            <Servo name="foundation_GR" port="1" />
+            <ContinuousRotationServo name="stone_extend" port="2" />
 
         </LynxModule>
         <LynxModule name="Child" port="3">
@@ -21,8 +17,12 @@
             <goBILDA5202SeriesMotor name="right_collect" port="1" />
             <goBILDA5202SeriesMotor name="left_lift" port="2" />
             <goBILDA5202SeriesMotor name="right_lift" port="3" />
-            <Servo name="lift_red" port="0" />
-            <Servo name="lift_blue" port="1" />
+            <ContinuousRotationServo name="bTransfer_L" port="0" />
+            <ContinuousRotationServo name="bTransfer_R" port="1" />
+            <Servo name="lift_red" port="2" />
+            <Servo name="lift_blue" port="3" />
+            <Servo name="stone_grab" port="4" />
+            <Servo name="capstone_holder" port="5" />
         </LynxModule>
     </LynxUsbDevice>
 </Robot>
