Updated Lift control, New Block Extend
Code put in to keep lift level
Block Extend changed from CR to 180 Servo
Driver Jog Controls moved to new buttons.

--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -12,7 +12,7 @@
             <Servo name="lift_red" port="2" />
             <Servo name="lift_blue" port="3" />
             <Servo name="stone_grab" port="4" />
-            <ContinuousRotationServo name="stone_extend" port="5" />
+            <Servo name="stone_extend" port="5" />
 
         </LynxModule>
         <LynxModule name="Child" port="3">
