Enhanced Lift Control
Include limit switches
manual control via moving setpoint
Auto Home for lift using limit switches.

--- a/TeamCode/src/main/res/xml/gforce.xml
+++ b/TeamCode/src/main/res/xml/gforce.xml
@@ -6,14 +6,15 @@
             <goBILDA5202SeriesMotor name="left_back_drive" port="1" />
             <goBILDA5202SeriesMotor name="right_front_drive" port="2" />
             <goBILDA5202SeriesMotor name="left_front_drive" port="3" />
-            <LynxEmbeddedIMU name="imu" port="0" bus="0" />
             <Servo name="foundation_GL" port="0" />
             <Servo name="foundation_GR" port="1" />
             <Servo name="lift_red" port="2" />
             <Servo name="lift_blue" port="3" />
             <Servo name="stone_grab" port="4" />
             <Servo name="stone_extend" port="5" />
-
+            <DigitalDevice name="left_limit" port="0" />
+            <DigitalDevice name="right_limit" port="1" />
+            <LynxEmbeddedIMU name="imu" port="0" bus="0" />
         </LynxModule>
         <LynxModule name="Child" port="3">
             <goBILDA5202SeriesMotor name="left_collect" port="0" />
@@ -23,7 +24,6 @@
             <ContinuousRotationServo name="bTransfer_L" port="0" />
             <ContinuousRotationServo name="bTransfer_R" port="1" />
             <Servo name="capstone_holder" port="2" />
-
         </LynxModule>
     </LynxUsbDevice>
 </Robot>
